[gd_scene load_steps=18 format=2]

[ext_resource path="res://Art/v1.1 dungeon crawler 16x16 pixel pack/heroes/knight/knight_idle_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Characters/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/NPC/NeutralNPCFSM.gd" type="Script" id=3]
[ext_resource path="res://Art/v1.1 dungeon crawler 16x16 pixel pack/heroes/knight/knight_idle_anim_f0.png" type="Texture" id=4]
[ext_resource path="res://Characters/NPC/BaseNeutralNPC.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.0
height = 8.0

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=9]
resource_name = "dead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dead" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="CircleShape2D" id=10]
radius = 9.0

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="BaseNeutralNPC" instance=ExtResource( 2 )]
collision_layer = 4
collision_mask = 4
script = ExtResource( 5 )
max_hp = 1
hp = 1

[node name="FiniteStateMachine" parent="." index="0"]
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( -1, 0 )
shape = SubResource( 3 )

[node name="AnimationPlayer" parent="." index="3"]
anims/RESET = SubResource( 8 )
anims/dead = SubResource( 9 )

[node name="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 10 )

[node name="Tween" type="Tween" parent="." index="5"]

[node name="Node2D" type="Node2D" parent="." index="6"]
z_index = 5

[node name="Tooltip" type="Label" parent="Node2D" index="0"]
margin_right = 40.0
margin_bottom = 14.0

[node name="AnimatedSprite" parent="." index="7"]
frames = SubResource( 2 )
animation = "idle"
frame = 1
playing = true

[node name="Hitbox" type="Area2D" parent="." index="8"]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 10 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
